# drafft-ink

./: Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml
crates/drafftink-app/src/: app.rs  event_handler.rs  ui.rs
crates/drafftink-core/: Cargo.toml
crates/drafftink-core/src/: elbow.rs  lib.rs  selection.rs  snap.rs
crates/drafftink-core/src/crdt/: convert.rs  mod.rs
crates/drafftink-core/src/shapes/: arrow.rs  ellipse.rs  freehand.rs  group.rs  image.rs  line.rs  mod.rs  rectangle.rs  text.rs
crates/drafftink-render/: Cargo.toml
crates/drafftink-render/src/: vello_impl.rs
crates/drafftink-server/: Cargo.toml
crates/drafftink-server/src/: lib.rs  main.rs
crates/drafftink-webserver/: Cargo.toml
crates/drafftink-webserver/src/: main.rs
crates/drafftink-widgets/src/: colors.rs
