[package]
name = "drafftink-webserver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Self-contained web server for DrafftInk with embedded frontend"

[[bin]]
name = "drafftink-webserver"
path = "src/main.rs"

[dependencies]
drafftink-server = { path = "../drafftink-server" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
